--- a/voskcoin.html
+++ b/voskcoin.html
@@ -9,7 +9,7 @@
     content="Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy cost, and high security, we help businesses with managed and unmanaged miner hosting.">
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="../dist/style.min.css?v=1.1">
+  <link rel="stylesheet" href="../dist/style.min.css?v=1.1.2">
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
@@ -30,7 +30,7 @@
   <script defer src="/app/js/detect-location.js"></script>
 
 
-  <title>Digital Shovel - Contact Us</title>
+  <title>Digital Shovel - VoskCoin</title>
 </head>
 
 <body>
