--- a/voskcoin.html
+++ b/voskcoin.html
@@ -124,17 +124,15 @@
     <section class="promotion flex flex-col-mobile jc-sb gap--xxlg">
       <div class="card__youtube">
         <div class="flex flex-col gap--sm">
-          <div class="flex ai-c gap--sm">
+          <a class="card__youtube--link flex ai-c gap--sm" target="_blank" href="https://www.youtube.com/@voskcoin">
             <div class="card__youtube--logo">
               <img src="images/icons/icon_youtube.svg" alt="YouTube Logo" />
             </div>
             <div class="flex flex-col">
               <h2>VoskCoin Promotion</h2>
-              <a target="_blank" href="https://www.youtube.com/@voskcoin">
-                <h3>Visit Channel</h3>
-              </a>
+              <h3>Visit Channel</h3>
             </div>
-          </div>
+          </a>
           <p>Placing an order through this form will provide you with a 5% discount on any of our retail
             products.</p>
         </div>
