--- a/voskcoin.html
+++ b/voskcoin.html
@@ -122,23 +122,32 @@
     </section>
 
     <section class="promotion flex flex-col-mobile jc-sb gap--xxlg">
-      <div class="card__youtube">
-        <div class="flex flex-col gap--sm">
-          <a class="card__youtube--link flex ai-c gap--sm" target="_blank" href="https://www.youtube.com/@voskcoin">
-            <div class="card__youtube--logo">
-              <img src="images/icons/icon_youtube.svg" alt="YouTube Logo" />
-            </div>
-            <div class="flex flex-col">
-              <h2>VoskCoin Promotion</h2>
-              <h3>Visit Channel</h3>
-            </div>
-          </a>
-          <p>Placing an order through this form will provide you with a 5% discount on any of our retail
-            products.</p>
+      <div class="container__promotion flex flex-col gap--lg">
+        <div class="card__youtube">
+          <div class="flex flex-col gap--sm">
+            <a class="card__youtube--link flex ai-c gap--sm" target="_blank" href="https://www.youtube.com/@voskcoin">
+              <div class="card__youtube--logo">
+                <img src="images/icons/icon_youtube.svg" alt="YouTube Logo" />
+              </div>
+              <div class="flex flex-col">
+                <h2>VoskCoin Promotion</h2>
+                <h3>Visit Channel</h3>
+              </div>
+            </a>
+            <p>Placing an order through this form will provide you with a 5% discount on any of our retail
+              products.</p>
+          </div>
+          <div class="card__youtube--discount">
+            <img src="images/icons/icon_five-percent-off.svg" alt="-5% off discount" />
+          </div>
         </div>
-        <div class="card__youtube--discount">
-          <img src="images/icons/icon_five-percent-off.svg" alt="-5% off discount" />
-        </div>
+        <p class="promotion__text">
+          <span class="text--emphasis">VoskCoin is a popular YouTube channel that focuses on crypto mining.</span> It
+          offers a wide range of information on this topic, including news, reviews,
+          and tutorials. The channel covers major cryptocurrencies like Bitcoin and Ethereum, as well as newer options.
+          They provide detailed information on building GPU mining rigs, the latest cryptocurrency news, and tutorials
+          on mining new coins and using new crypto sites.
+        </p>
       </div>
       <div class="form form__vosk">
         <form action="https://formspree.io/f/xbjbjwdz" method="POST" autocomplete="on" enctype="multipart/form-data">
